# temperature-control

./: Cargo.toml  LICENSE  README.md  build.rs  index.html
apps/enable/: Cargo.toml
apps/enable/src/: main.rs
apps/logger/: Cargo.toml
apps/logger/src/: main.rs
apps/server/: Cargo.toml
apps/server/src/: main.rs  pwm.rs  schedule.rs  status.html  web.rs
apps/server/static/: manifest.json  status.html  styles.css  sw.js
apps/udp-test/: Cargo.toml
apps/udp-test/src/: main.rs
protocol/: Cargo.toml
protocol/src/: fragment_combiner.rs  lib.rs  relay.rs
protocol/src/protos/: dev.proto  mod.rs
src/: App.tsx  main.rs
src/protos/: mod.rs
temperature-react-ui/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json
temperature-react-ui/public/: manifest.json
temperature-react-ui/src/: App.tsx  index.css  types.ts
temperature-react-ui/src/components/: RoomCard.tsx  StatusIcon.tsx  TemperatureChart.tsx
temperature-react-ui/src/services/: api.ts
