[package]
name = "temperature-server"
version = "0.1.0"
edition = "2021"

[dependencies]
protobuf = "*"
anyhow = { version = "*", features = ["backtrace"] }
chrono = "*"
temperature-protocol = { path = "../../protocol" }
axum = { version = "*", features = ["macros"] }
tokio = { version = "*", features = ["full"] }
tower-http = { version = "*", features = ["fs", "compression-full"] }
tower = "*"
futures = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"

